tests/negative/gold/bad_literal2_test.gold
tests/negative/bad_literal2_test.toit:6:9: error: Invalid number literal
  print 0b2
        ^~~
tests/negative/bad_literal2_test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
